9mj - everything done except audio improvement

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <div class="intro animated">
     <div class="wrapper-outer">
         <div class="wrapper">
-            <p class="animated notshown delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu ni poljubiti...</p>
+            <p class="animated notshown delayed-intro-1">Ljubs, <span class="imp">21.</span> je, a ne mogu poljubiti, zagrliti</p>
             <p class="animated notshown delayed-intro-2">mogu bar ovo...</p>
         </div>
 
         <div class="button animated notshown delayed-intro-3">
-            <img src="images/fingerprint.png" alt="">
+            <!--<img src="images/fingerprint.png" alt="">-->
+            <p>klikni me</p>
+
         </div>
 
     </div>
@@ -73,43 +75,46 @@
 
 
 
-        <div class="col-xs-12">
-            <div id="5" class="chattitle animated notshown">
+
+
+
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
                 <p>i krenulo je dopisivanje...</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="6" class="chatwindow nata animated notshown delayed-1">
+        <div class="col-xs-12 nata-chat-target">
+            <div class="chatwindow nata animated notshown">
                 <p>Meni omiljena muzika iz filma TOP GUN Ali to je zapravo pj Znaci bolest koliko volim tu pj</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="7" class="chatwindow sla animated notshown delayed-2">
+        <div class="col-xs-12 sla-chat-target">
+            <div class="chatwindow sla animated notshown">
                 <p>Take My Breathe Away?</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="8" class="chatwindow nata animated notshown delayed-3">
+        <div class="col-xs-12 nata-chat-target">
+            <div class="chatwindow nata animated notshown">
                 <p>Daa Oduzimas mi dah</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="9" class="chatwindow sla animated notshown delayed-4">
+        <div class="col-xs-12 sla-chat-target">
+            <div class="chatwindow sla animated notshown">
                 <p>takodje :D hahaha</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="10" class="chatwindow nata animated notshown delayed-5">
+        <div class="col-xs-12 nata-chat-target">
+            <div class="chatwindow nata animated notshown">
                 <p>E imala sam filing da ces me iskulirati kad sam ti poslala por,jesam majke mi</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="11" class="chatwindow sla animated notshown delayed-6">
+        <div class="col-xs-12 sla-chat-target">
+            <div class="chatwindow sla animated notshown">
                 <p>ZASTO? pa sjecas se grina ljetos ;)</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="12" class="dotted animated notshown delayed-7">
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -118,13 +123,16 @@
 
 
 
-        <div class="col-xs-12">
-            <div class="chattitle">
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
                 <p>...već do 4:25 sledećeg jutra sam znao da si zanimljiva, otvorena, i da bih te baš želio upoznati.</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 icon-target">
+            <img class="img-responsive thinking-of animated notshown" src="images/thinking-of.png" alt="">
+        </div>
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -133,18 +141,18 @@
 
 
 
-        <div class="col-xs-12">
-            <div class="chattitle">
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
                 <p>21.10.2015, 21:30</p>
                 <p>geografska dužina: 16.710304°</p>
                 <p>geografska širina: 44.978878°</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <img class="img-responsive" src="images/location.png" alt="">
+        <div class="col-xs-12 icon-target">
+            <img class="img-responsive animated notshown" src="images/location.png" alt="">
         </div>
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -153,26 +161,26 @@
 
 
 
-        <div class="col-xs-12">
-            <div class="chattitle">
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
                 <p>...i tako se mi počnemo "viđati", kao nije to ništa...</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="chatwindow sla">
+        <div class="col-xs-12 sla-chat-target">
+            <div class="chatwindow sla animated notshown">
                 <p>Mala da se ti nisi zaljubila?</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div id="8" class="chatwindow nata">
+        <div class="col-xs-12 nata-chat-target">
+            <div id="8" class="chatwindow nata animated notshown">
                 <p>Ma neee, ma kakav ja!</p>
             </div>
         </div>
-        <div class="col-xs-12">
-                <img class="img-responsive blushing" src="images/blushing.png" alt="">
+        <div class="col-xs-12 icon-target">
+                <img class="img-responsive blushing animated notshown" src="images/blushing.png" alt="">
         </div>
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -180,24 +188,26 @@
         </div>
 
 
-        <div class="col-xs-12">
-            <div class="chattitle">
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
                 <p>...pa vremenom to postane veza, ljubav, šta god...</p>
             </div>
-            <div class="chatwindow sla">
+        </div>
+        <div class="col-xs-12 sla-chat-target">
+            <div class="chatwindow sla animated notshown">
                 <p>Kontam da cu ti prvi put reci VT, kad negdje budem retardiran od piva hahaha</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="chatwindow nata">
+        <div class="col-xs-12 nata-chat-target">
+            <div class="chatwindow nata animated notshown">
                 <p>reci mi!!!</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <img class="img-responsive recimi" src="images/recimi.png" alt="">
+        <div class="col-xs-12 icon-target">
+            <img class="img-responsive recimi animated notshown" src="images/recimi.png" alt="">
         </div>
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -206,89 +216,101 @@
 
 
 
-        <div class="col-xs-12">
-            <div class="chattitle icon-section">
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle icon-section animated notshown">
                 <p>...tokom koje smo imali i dobre i loše trenutke...</p>
             </div>
         </div>
 
         <div class="col-xs-12 kissing subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>ljubili se</p>
             </div>
-            <img class="img-responsive" src="images/kissing.png" alt="">
+            <img class="img-responsive animated notshown" src="images/kissing.png" alt="">
         </div>
 
         <div class="col-xs-12 arguing subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>svađali se</p>
             </div>
-            <img class="img-responsive" src="images/arguing.png" alt="">
+            <img class="img-responsive animated notshown" src="images/arguing.png" alt="">
         </div>
 
         <div class="col-xs-12 plans subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>pravili planove</p>
             </div>
-            <img class="img-responsive" src="images/plans.png" alt="">
+            <img class="img-responsive animated notshown" src="images/plans.png" alt="">
         </div>
 
         <div class="col-xs-12 no-plans subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>jebeš planove</p>
             </div>
-            <img class="img-responsive" src="images/no-plans.png" alt="">
+            <img class="img-responsive animated notshown" src="images/no-plans.png" alt="">
         </div>
 
         <div class="col-xs-12 helping-out subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>pomagali jedno drugom</p>
             </div>
-            <img class="img-responsive" src="images/helping-out.png" alt="">
+            <img class="img-responsive animated notshown" src="images/helping-out.png" alt="">
         </div>
 
         <div class="col-xs-12 breaking-up subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>gubili jedno drugo</p>
             </div>
-            <img class="img-responsive" src="images/breaking-up.png" alt="">
+            <img class="img-responsive animated notshown" src="images/breaking-up.png" alt="">
         </div>
 
         <div class="col-xs-12 getting-back-together subtitle-holder">
-            <div class="subtitle">
+            <div class="subtitle animated notshown">
                 <p>i opet se pronalazili</p>
             </div>
-            <img class="img-responsive" src="images/getting-back-together.png" alt="">
+            <img class="img-responsive animated notshown" src="images/getting-back-together.png" alt="">
         </div>
 
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
             </div>
         </div>
 
-        <div class="col-xs-12">
-            <div class="chattitle">
+
+
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
                 <p>i sad smo na najtežem ispitu - daljini</p>
                 <p>nadam se da ćemo i nju prebroditi kao i sve do sada</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 icon-target">
+            <img class="img-responsive distance animated notshown" src="images/distance.png" alt="">
+        </div>
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="chattitle">
-                <p>nemoj samo u jedno sumnjati</p>
+
+
+
+
+        <div class="col-xs-12 chattitle-target">
+            <div class="chattitle animated notshown">
+                <p>i moram ti nešto reći...</p>
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="dotted">
+        <div class="col-xs-12 icon-target">
+            <img class="img-responsive together animated notshown" src="images/together.png" alt="">
+        </div>
+        <div class="col-xs-12 dotted-target">
+            <div class="dotted animated notshown">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
