--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,31 @@
 </head>
 <body>
 
-<header class="header">
+<nav id="main-menu">
+    <ul class="main-menu">
+        <li>
+            <a href="#întro">About Me</a>
+        </li>
+        <li>
+            <a href="#basic-info">Basic Info</a>
+        </li>
+        <li>
+            <a href="#experiance">My past experiance</a>
+        </li>
+        <li>
+            <a href="#întro">About me</a>
+        </li>
+    </ul>
+</nav>
 
+
+<header class="header">
+    <button type="button" class="nav-toggle" aria-expanded="false">
+        <span class="sr-only">Toggle sidebar</span>
+        <span class="icon-bar icon-bar-1"></span>
+        <span class="icon-bar icon-bar-2"></span>
+        <span class="icon-bar icon-bar-3"></span>
+    </button>
 </header>
 
 <nav class="main-menu">
