--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>dom.ba</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/images/fav/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/fav/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/images/fav/manifest.json">
+    <link rel="mask-icon" href="/images/fav/safari-pinned-tab.svg" color="#d40f0f">
+    <link rel="shortcut icon" href="/images/fav/favicon.ico">
+    <meta name="msapplication-config" content="/images/fav/browserconfig.xml">
+    <meta name="theme-color" content="#d40f0f">
+
+
     <link rel="stylesheet" href="css/main.min.css">
 
 </head>
@@ -37,16 +48,17 @@
     </button>
 </header>
 
-<nav class="main-menu">
-    <div class="container-fluid">
+<div class="jumbotron">
+    <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <p>lorem</p>
+                <h1>
+                    asdasdasd
+                </h1>
             </div>
         </div>
     </div>
-</nav>
-
+</div>
 
 <div class="container">
     <div class="row">
@@ -55,7 +67,6 @@
                 <div class="row">
 
                     <article class="single-item">
-                        <img class="image" src="images/"
                     </article>
 
                     <article class="single-item">
