domba - some tags

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <h1>
-                    asdasdasd
+                    dom.ba
                 </h1>
+                <h2>asdsdf</h2>
             </div>
         </div>
     </div>
