--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,10 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>
-                    asdasdasd
+                <h1 class="text-center">
+                    dom.ba
                 </h1>
+                <h2>asdsdf</h2>
             </div>
         </div>
     </div>
