--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
 <body>
 
 <nav id="main-menu">
-    <ul class="main-menu">
-        <li>
-            <a href="#întro">About Me</a>
-        </li>
-        <li>
-            <a href="#basic-info">Basic Info</a>
-        </li>
-        <li>
-            <a href="#experiance">My past experiance</a>
-        </li>
-        <li>
-            <a href="#întro">About me</a>
-        </li>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <div class="search-area">
+                <form>
+                    <div class="form-group col-lg-4">
+                        <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="">
+                        <label for="exampleInputEmail1">Email address</label>
+                    </div>
+                    <div class="form-group col-lg-4">
+                        <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="">
+                        <label for="exampleInputPassword1">Password</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </nav>
 
 
@@ -48,18 +51,34 @@
     </button>
 </header>
 
-<div class="jumbotron">
+<section class="jumbotron hero">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>
+                <h1 class="text-center">
                     dom.ba
                 </h1>
                 <h2>asdsdf</h2>
             </div>
+
+            <div class="search-area">
+                <form>
+                    <div class="form-group col-lg-6">
+                        <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="">
+                        <label for="exampleInputEmail1">Email address</label>
+                    </div>
+                    <div class="form-group col-lg-4">
+                        <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="">
+                        <label for="exampleInputPassword1">Password</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
+                    <button type="submit" class="btn btn-success btn-lg">Pretraži</button>
+                    <button type="submit" class="btn btn-warning btn-lg">Pretraži</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
 <div class="container">
     <div class="row">
@@ -82,6 +101,23 @@
         </div>
     </div>
 </div>
+
+<section class="commercials">
+    <div class="wrapper">
+        <div class="col-xs-12">
+            <div class="your-class">
+                <div>asda</div>
+                <div>234</div>
+                <div>your content</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<footer class="footer">
+
+</footer>
 
 <script src="js/main.min.js"></script>
 
