domba - slider for price added

--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
                 </a>
 
             </div>
-            <div class="text-holder">
-
+            <div class="text-holder top">
+                <p>
+                    UKOLIKO PRODAJETE ILI IZDAJETE NEKRETNINE
+                </p>
             </div>
         </div>
 
