--- a/app/index.html
+++ b/app/index.html
@@ -150,8 +150,10 @@
                 </a>
 
             </div>
-            <div class="text-holder">
-
+            <div class="text-holder top">
+                <p>
+                    UKOLIKO PRODAJETE ILI IZDAJETE NEKRETNINE
+                </p>
             </div>
         </div>
 
