domba - cta, featured, partners, slick slider introduced

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 
 </header>
 
-<section class="jumbotron hero">
-    <div class="container">
-        <div class="row">
+<section class="hero">
+    <div class="wrapper-outer">
+        <div class="wrapper">
 
             <div class="hero-area">
                 <div class="wrapper">
@@ -238,7 +238,7 @@
                                 <option>5</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
+                        <button type="submit" class="btn btn-primary btn-lg active">Pretraži</button>
                     </form>
                 </div>
 
@@ -248,43 +248,63 @@
     </div>
 </section>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <h1>izdvojeni oglasi</h1>
-                <div class="row">
-
-                    <article class="single-item">
-                    </article>
-
-                    <article class="single-item">
-                        r
-                    </article>
-
-                    <article class="single-item">
-                        f
-                    </article>
-
-                </div>
+<section class="cta">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <div class="message">
+                <p>ukoliko prodajete ili izdajete nekretnine - postavite svoj oglas potpuno besplatno!</p>
+            </div>
+            <div class="cta-btn">
+                <a href="#" class="">Objavite oglas</a>
+            </div>
         </div>
     </div>
-</div>
 
-<section class="commercials">
-    <div class="wrapper">
-        <div class="col-xs-12">
-            <div class="your-class">
-                <div>asda</div>
-                <div>234</div>
+</section>
+
+<section class="partners">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <div class="partners-title">
+                <h1>Naši partneri</h1>
+            </div>
+            <div class="partners-list">
                 <div>your content</div>
+                <div>your content</div>
+                <div>your content</div>
+                <div>your content</div>
+                <div>your content</div>
+                <div>your content</div>            <div>your content</div>
+                <div>your content</div>
+                <div>your content</div>
+
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="featured">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <div class="featured-title">
+                <h1>Izdvojeni oglasi</h1>
             </div>
         </div>
     </div>
 </section>
 
-
 <footer class="footer">
-
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <div class="left-side">
+                asd
+            </div>
+            <div class="right-side">
+                asd
+            </div>
+        </div>
+    </div>
 </footer>
 
 <script src="js/main.min.js"></script>
