--- a/app/index.html
+++ b/app/index.html
@@ -45,15 +45,15 @@
 
             <div class="links-area animated">
                 <div class="panel-group links-group animated" id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-default">
+                    <div class="panel panel-primary">
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                     Collapsible Group Item #1
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
@@ -209,6 +209,7 @@
 
             <div class="hero-search-area">
                 <button class="open-search-btn btn btn-primary btn-lg btn-block collapsed" type="button" data-toggle="collapse" data-target="#hero-search-area" aria-expanded="false" aria-controls="collapseExample">
+                    <span class="fa fa-search-plus"></span>
                     Pretraga nekretnina
                 </button>
                 <div class="collapse form-holder" id="hero-search-area">
@@ -240,7 +241,7 @@
                                 <option>5</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg active">Pretraži</button>
+                        <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
                     </form>
                 </div>
 
@@ -257,7 +258,8 @@
                 <p>ukoliko prodajete ili izdajete nekretnine - postavite svoj oglas potpuno besplatno!</p>
             </div>
             <div class="cta-btn">
-                <a href="#" class="">Objavite oglas</a>
+
+                <a href="#" class=""><span class="fa fa-pencil"></span>Objavite oglas</a>
             </div>
         </div>
     </div>
@@ -300,7 +302,7 @@
     <div class="wrapper-outer">
         <div class="wrapper">
             <div class="left-side">
-                asd
+                <a class="btn btn-primary btn-edit">asd </a>
             </div>
             <div class="right-side">
                 asd
