domba - header logo (size structure), main.js (intro animations),

--- a/app/index.html
+++ b/app/index.html
@@ -254,12 +254,12 @@
 <section class="cta">
     <div class="wrapper-outer">
         <div class="wrapper">
-            <div class="message">
+            <div class="cta-message animated fadeOut">
                 <p>ukoliko prodajete ili izdajete nekretnine - postavite svoj oglas potpuno besplatno!</p>
             </div>
-            <div class="cta-btn">
+            <div class="cta-btn animated fadeOut">
 
-                <a href="#" class=""><span class="fa fa-pencil"></span>Objavite oglas</a>
+                <a href="#" class="btn-edit"></span>Objavite oglas</a>
             </div>
         </div>
     </div>
