domba - partners, new items

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sh">
 <head>
     <meta charset="UTF-8">
     <title>dom.ba</title>
@@ -28,64 +28,72 @@
 
 
             <div class="search-area animated">
-                <form>
-                    <div class="form-group col-lg-4">
-                        <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="">
-                        <label for="exampleInputEmail1">Email address</label>
-                    </div>
-                    <div class="form-group col-lg-4">
-                        <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="">
-                        <label for="exampleInputPassword1">Password</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
-                </form>
+                <div class="wrapper">
+                    <form>
+                        <div class="form-group col-lg-4">
+                            <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="">
+                            <label for="exampleInputEmail1">Email address</label>
+                        </div>
+                        <div class="form-group col-lg-4">
+                            <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="">
+                            <label for="exampleInputPassword1">Password</label>
+                        </div>
+                        <div class="form-group col-lg-4">
+                            <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
+                        </div>
+                    </form>
+                </div>
             </div>
 
             <div class="links-area animated">
-                <div class="panel-group links-group animated" id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading" role="tab" id="headingOne">
-                            <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                    Collapsible Group Item #1
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="wrapper">
+                    <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
+                        <div class="wrapper">
+                            <div class="main-menu-tab">
+                                <div class="main-menu-tab-selector" role="tab" id="headingOne">
+                                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                        Collapsible Group Item #1
+                                    </a>
+                                </div>
+                                <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
+                                    <div class="">
+                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="main-menu-tab">
+                                <div class="" role="tab" id="headingTwo">
+                                    <h4 class="">
+                                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                            Collapsible Group Item #2
+                                        </a>
+                                    </h4>
+                                </div>
+                                <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                    <div class="">
+                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="main-menu-tab">
+                                <div class="" role="tab" id="headingThree">
+                                    <h4 class="">
+                                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                            Kontakt
+                                        </a>
+                                    </h4>
+                                </div>
+                                <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+                                    <div class="">
+                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingTwo">
-                            <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Collapsible Group Item #2
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading" role="tab" id="headingThree">
-                            <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Collapsible Group Item #3
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                            <div class="panel-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
+
                     </div>
                 </div>
+
             </div>
 
 
@@ -271,15 +279,46 @@
                 <h1>Naši partneri</h1>
             </div>
             <div class="partners-list">
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>            <div>your content</div>
-                <div>your content</div>
-                <div>your content</div>
-
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-1.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-2.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-3.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-4.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-1.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-2.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-3.jpg" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="image-wrapper">
+                        <img class="img-responsive" src="images/partners/partner-4.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -291,6 +330,16 @@
         <div class="wrapper">
             <div class="featured-title">
                 <h1>Izdvojeni oglasi</h1>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="new">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <div class="new-title">
+                <h1>Novi oglasi</h1>
             </div>
         </div>
     </div>
