domba - jumbotron, buttons

--- a/app/index.html
+++ b/app/index.html
@@ -217,10 +217,10 @@
 
             <div class="hero-search-area">
                 <button class="open-search-btn btn btn-primary btn-lg btn-block collapsed" type="button" data-toggle="collapse" data-target="#hero-search-area" aria-expanded="false" aria-controls="collapseExample">
-                    <span class="fa fa-search-plus"></span>
                     Pretraga nekretnina
+                    <span class="fa fa-plus"></span>
                 </button>
-                <div class="collapse form-holder" id="hero-search-area">
+                <div class="collapse form-holder wrapper" id="hero-search-area">
                     <form>
                         <div class="form-group col-lg-4">
                             <select class="form-control input-lg">
@@ -249,11 +249,11 @@
                                 <option>5</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg">Pretraži</button>
+                        <div class="form-group col-xs-12">
+                            <button type="submit" class="btn search-btn btn-lg btn-search">Pretraži</button>
+                        </div>
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
