--- a/index.html
+++ b/index.html
@@ -220,33 +220,56 @@
                 </button>
                 <div class="collapse form-holder wrapper" id="hero-search-area">
                     <form>
-                        <div class="form-group col-lg-4">
+                        <div class="form-group col-xs-12">
                             <select class="form-control input-lg">
-                                <option>2</option>
+                                <option>Izaberite vrstu oglasa</option>
                                 <option>2</option>
                                 <option>3</option>
                                 <option>4</option>
                                 <option>5</option>
                             </select>
                         </div>
-                        <div class="form-group col-lg-4">
+                        <div class="form-group col-xs-12">
                             <select class="form-control input-lg">
-                                <option>1</option>
+                                <option>Izaberite vrstu objekta</option>
                                 <option>2</option>
                                 <option>3</option>
                                 <option>4</option>
                                 <option>5</option>
                             </select>
                         </div>
-                        <div class="form-group col-lg-4">
+                        <div class="form-group col-xs-12">
                             <select class="form-control input-lg">
-                                <option>1</option>
+                                <option>Izaberite grad</option>
                                 <option>2</option>
                                 <option>3</option>
                                 <option>4</option>
                                 <option>5</option>
                             </select>
                         </div>
+                        <div class="form-group col-xs-12">
+                            <select class="form-control input-lg">
+                                <option>Izaberite grad</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-xs-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">cijena od:</span>
+                                <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">do:</span>
+                                <input type="text" class="form-control input-lg" id="inputGroupSuccess1" aria-describedby="inputGroupSuccess1Status">
+                            </div>
+                        </div>
+
+
                         <div class="form-group col-xs-12">
                             <button type="submit" class="btn search-btn btn-lg btn-search">Pretraži</button>
                         </div>
@@ -330,6 +353,9 @@
         <div class="wrapper">
             <div class="featured-title">
                 <h1>Izdvojeni oglasi</h1>
+            </div>
+            <div class="featured-list">
+
             </div>
         </div>
     </div>
